@@ -2,23 +2,24 @@ package com.minecolonies.core.colony.buildings.workerbuildings;
 
 import com.ldtteam.blockui.views.BOWindow;
 import com.minecolonies.api.colony.IColony;
-import com.minecolonies.api.colony.fields.IField;
-import com.minecolonies.api.colony.fields.plantation.IPlantationModule;
-import com.minecolonies.api.colony.fields.registry.FieldRegistries;
+import com.minecolonies.api.colony.buildingextensions.IBuildingExtension;
+import com.minecolonies.api.colony.buildingextensions.plantation.IPlantationModule;
+import com.minecolonies.api.colony.buildingextensions.registry.BuildingExtensionRegistries;
+import com.minecolonies.api.colony.buildingextensions.registry.BuildingExtensionRegistries.BuildingExtensionEntry;
 import com.minecolonies.api.colony.jobs.registry.JobEntry;
 import com.minecolonies.api.crafting.GenericRecipe;
 import com.minecolonies.api.crafting.IGenericRecipe;
+import com.minecolonies.api.equipment.ModEquipmentTypes;
 import com.minecolonies.api.tileentities.AbstractTileEntityColonyBuilding;
 import com.minecolonies.api.util.CraftingUtils;
 import com.minecolonies.api.util.ItemStackUtils;
 import com.minecolonies.api.util.OptionalPredicate;
-import com.minecolonies.api.util.constant.ToolType;
 import com.minecolonies.core.client.gui.modules.PlantationFieldsModuleWindow;
+import com.minecolonies.core.colony.buildingextensions.PlantationField;
 import com.minecolonies.core.colony.buildings.AbstractBuilding;
 import com.minecolonies.core.colony.buildings.modules.AbstractCraftingBuildingModule;
-import com.minecolonies.core.colony.buildings.modules.FieldsModule;
+import com.minecolonies.core.colony.buildings.modules.BuildingExtensionsModule;
 import com.minecolonies.core.colony.buildings.moduleviews.FieldsModuleView;
-import com.minecolonies.core.colony.fields.PlantationField;
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.FriendlyByteBuf;
@@ -27,7 +28,6 @@ import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.util.Tuple;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.Blocks;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import org.jetbrains.annotations.NotNull;
@@ -38,9 +38,9 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static com.minecolonies.api.research.util.ResearchConstants.PLANTATION_LARGE;
+import static com.minecolonies.api.util.constant.EquipmentLevelConstants.TOOL_LEVEL_WOOD_OR_GOLD;
 import static com.minecolonies.api.util.constant.NbtTagConstants.TAG_PLANTGROUND;
 import static com.minecolonies.api.util.constant.TagConstants.CRAFTING_PLANTATION;
-import static com.minecolonies.api.util.constant.ToolLevelConstants.TOOL_LEVEL_WOOD_OR_GOLD;
 import static com.minecolonies.api.util.constant.translation.GuiTranslationConstants.FIELD_LIST_PLANTATION_RESEARCH_REQUIRED;
 import static com.minecolonies.api.util.constant.translation.GuiTranslationConstants.FIELD_LIST_WARN_EXCEEDS_PLANT_COUNT;
 
@@ -71,8 +71,8 @@ public class BuildingPlantation extends AbstractBuilding
     public BuildingPlantation(final IColony c, final BlockPos l)
     {
         super(c, l);
-        keepX.put(itemStack -> ItemStackUtils.hasToolLevel(itemStack, ToolType.AXE, TOOL_LEVEL_WOOD_OR_GOLD, getMaxToolLevel()), new Tuple<>(1, true));
-        keepX.put(itemStack -> ItemStackUtils.hasToolLevel(itemStack, ToolType.SHEARS, TOOL_LEVEL_WOOD_OR_GOLD, getMaxToolLevel()), new Tuple<>(1, true));
+        keepX.put(itemStack -> ItemStackUtils.hasEquipmentLevel(itemStack, ModEquipmentTypes.axe.get(), TOOL_LEVEL_WOOD_OR_GOLD, getMaxEquipmentLevel()), new Tuple<>(1, true));
+        keepX.put(itemStack -> ItemStackUtils.hasEquipmentLevel(itemStack, ModEquipmentTypes.shears.get(), TOOL_LEVEL_WOOD_OR_GOLD, getMaxEquipmentLevel()), new Tuple<>(1, true));
     }
 
     @Override
@@ -84,9 +84,9 @@ public class BuildingPlantation extends AbstractBuilding
 
     private void updateFields()
     {
-        updateField(FieldRegistries.plantationSugarCaneField.get());
-        updateField(FieldRegistries.plantationCactusField.get());
-        updateField(FieldRegistries.plantationBambooField.get());
+        updateField(BuildingExtensionRegistries.plantationSugarCaneField.get());
+        updateField(BuildingExtensionRegistries.plantationCactusField.get());
+        updateField(BuildingExtensionRegistries.plantationBambooField.get());
     }
 
     /**
@@ -94,24 +94,24 @@ public class BuildingPlantation extends AbstractBuilding
      * Legacy code, can be removed when plantations will no longer have to support fields
      * directly from the hut building.
      */
-    private void updateField(FieldRegistries.FieldEntry type)
+    private void updateField(BuildingExtensionEntry type)
     {
         final PlantationField plantationField = PlantationField.create(type, getPosition());
         final List<BlockPos> workingPositions =
           plantationField.getModule().getValidWorkingPositions(colony.getWorld(), getLocationsFromTag(plantationField.getModule().getWorkTag()));
         if (workingPositions.isEmpty())
         {
-            colony.getBuildingManager().removeField(field -> field.equals(plantationField));
+            colony.getBuildingManager().removeBuildingExtension(field -> field.equals(plantationField));
             return;
         }
 
-        if (colony.getBuildingManager().addField(plantationField))
+        if (colony.getBuildingManager().addBuildingExtension(plantationField))
         {
             plantationField.setWorkingPositions(workingPositions);
         }
         else
         {
-            final Optional<IField> existingField = colony.getBuildingManager().getField(field -> field.equals(plantationField));
+            final Optional<IBuildingExtension> existingField = colony.getBuildingManager().getMatchingBuildingExtension(field -> field.equals(plantationField));
             if (existingField.isPresent() && existingField.get() instanceof PlantationField existingPlantationField)
             {
                 existingPlantationField.setWorkingPositions(workingPositions);
@@ -148,9 +148,9 @@ public class BuildingPlantation extends AbstractBuilding
     public Map<Predicate<ItemStack>, Tuple<Integer, Boolean>> getRequiredItemsAndAmount()
     {
         final Map<Predicate<ItemStack>, Tuple<Integer, Boolean>> toKeep = super.getRequiredItemsAndAmount();
-        for (FieldsModule module : getModulesByType(FieldsModule.class))
+        for (BuildingExtensionsModule module : getModulesByType(BuildingExtensionsModule.class))
         {
-            for (final IField field : module.getOwnedFields())
+            for (final IBuildingExtension field : module.getOwnedExtensions())
             {
                 if (field instanceof PlantationField plantationField)
                 {
@@ -178,9 +178,9 @@ public class BuildingPlantation extends AbstractBuilding
             return false;
         }
 
-        for (FieldsModule module : getModulesByType(FieldsModule.class))
+        for (BuildingExtensionsModule module : getModulesByType(BuildingExtensionsModule.class))
         {
-            for (final IField field : module.getOwnedFields())
+            for (final IBuildingExtension field : module.getOwnedExtensions())
             {
                 if (field instanceof PlantationField plantationField)
                 {
@@ -222,7 +222,7 @@ public class BuildingPlantation extends AbstractBuilding
     /**
      * Field module implementation for the plantation.
      */
-    public static class PlantationFieldsModule extends FieldsModule
+    public static class PlantationFieldsModule extends BuildingExtensionsModule
     {
         @Override
         public void serializeToView(final @NotNull FriendlyByteBuf buf)
@@ -242,7 +242,7 @@ public class BuildingPlantation extends AbstractBuilding
         }
 
         @Override
-        protected int getMaxFieldCount()
+        protected int getMaxExtensionCount()
         {
             int allowedPlants = (int) Math.ceil(building.getBuildingLevel() / 2D);
             return building.getColony().getResearchManager().getResearchEffects().getEffectStrength(PLANTATION_LARGE) > 0
@@ -251,27 +251,21 @@ public class BuildingPlantation extends AbstractBuilding
         }
 
         @Override
-        public Class<?> getExpectedFieldType()
+        public Class<?> getExpectedExtensionType()
         {
             return PlantationField.class;
         }
 
         @Override
-        public @NotNull List<IField> getFields()
+        public @NotNull List<IBuildingExtension> getMatchingExtension(final Predicate<IBuildingExtension> predicateToMatch)
         {
-            return building.getColony().getBuildingManager().getFields(field -> field.hasModule(IPlantationModule.class));
+            return building.getColony().getBuildingManager().getBuildingExtensions(field -> field.hasModule(IPlantationModule.class) && predicateToMatch.test(field));
         }
 
         @Override
-        public boolean canAssignFieldOverride(IField field)
+        public boolean canAssignExtensionOverride(IBuildingExtension extension)
         {
-            return getCurrentPlantsPlusField(field) <= getMaxConcurrentPlants() && hasRequiredResearchForField(field);
-        }
-
-        @Override
-        protected int getFieldCheckTimeoutSeconds()
-        {
-            return 60;
+            return getCurrentPlantsPlusField(extension) <= getMaxConcurrentPlants() && hasRequiredResearchForField(extension);
         }
 
         /**
@@ -280,9 +274,9 @@ public class BuildingPlantation extends AbstractBuilding
          * @param extraField the extra field to calculate.
          * @return the amount of worked plants.
          */
-        private int getCurrentPlantsPlusField(final IField extraField)
+        private int getCurrentPlantsPlusField(final IBuildingExtension extraField)
         {
-            final Set<IPlantationModule> plants = getOwnedFields().stream()
+            final Set<IPlantationModule> plants = getOwnedExtensions().stream()
                                                     .map(field -> field.getFirstModuleOccurance(IPlantationModule.class))
                                                     .collect(Collectors.toSet());
             plants.add(extraField.getFirstModuleOccurance(IPlantationModule.class));
@@ -295,7 +289,7 @@ public class BuildingPlantation extends AbstractBuilding
          * @param field the field in question.
          * @return true if the research is handled.
          */
-        private boolean hasRequiredResearchForField(final IField field)
+        private boolean hasRequiredResearchForField(final IBuildingExtension field)
         {
             if (field instanceof PlantationField plantationField)
             {
@@ -328,19 +322,19 @@ public class BuildingPlantation extends AbstractBuilding
         }
 
         @Override
-        protected boolean canAssignFieldOverride(final IField field)
+        protected boolean canAssignFieldOverride(final IBuildingExtension field)
         {
             return getCurrentPlantsPlusField(field) <= maxConcurrentPlants && hasRequiredResearchForField(field);
         }
 
         @Override
-        protected List<IField> getFieldsInColony()
+        protected List<IBuildingExtension> getFieldsInColony()
         {
-            return getColony().getFields(field -> field.hasModule(IPlantationModule.class));
+            return getColony().getBuildingExtensions(field -> field.hasModule(IPlantationModule.class));
         }
 
         @Override
-        public @Nullable MutableComponent getFieldWarningTooltip(final IField field)
+        public @Nullable MutableComponent getFieldWarningTooltip(final IBuildingExtension field)
         {
             MutableComponent result = super.getFieldWarningTooltip(field);
             if (result != null)
@@ -366,7 +360,7 @@ public class BuildingPlantation extends AbstractBuilding
          * @param extraField the extra field to calculate.
          * @return the amount of worked plants.
          */
-        private int getCurrentPlantsPlusField(final IField extraField)
+        private int getCurrentPlantsPlusField(final IBuildingExtension extraField)
         {
             final Set<IPlantationModule> plants = getOwnedFields().stream()
                                                     .map(field -> field.getFirstModuleOccurance(IPlantationModule.class))
@@ -381,7 +375,7 @@ public class BuildingPlantation extends AbstractBuilding
          * @param field the field in question.
          * @return true if the research is handled.
          */
-        private boolean hasRequiredResearchForField(final IField field)
+        private boolean hasRequiredResearchForField(final IBuildingExtension field)
         {
             if (field instanceof PlantationField plantationField)
             {
@@ -454,23 +448,18 @@ public class BuildingPlantation extends AbstractBuilding
         {
             final List<IGenericRecipe> recipes = new ArrayList<>(super.getAdditionalRecipesForDisplayPurposesOnly(world));
 
-            for (FieldRegistries.FieldEntry type : FieldRegistries.getFieldRegistry().getValues())
+            for (BuildingExtensionEntry type : BuildingExtensionRegistries.getBuildingExtensionRegistry().getValues())
             {
-                type.getFieldModuleProducers().stream()
+                type.getExtensionModuleProducers().stream()
                   .map(m -> m.apply(null))
                   .filter(IPlantationModule.class::isInstance)
                   .map(m -> (IPlantationModule) m)
                   .findFirst()
-                  .ifPresent(module -> recipes.add(new GenericRecipe(null,
-                    new ItemStack(module.getItem()),
-                    Collections.emptyList(),
-                    List.of(module.getRequiredItemsForOperation()),
-                    1,
-                    Blocks.AIR,
-                    null,
-                    module.getRequiredTool(),
-                    Collections.emptyList(),
-                    -1)));
+                  .ifPresent(module -> recipes.add(GenericRecipe.builder()
+                          .withOutput(module.getItem())
+                          .withInputs(List.of(module.getRequiredItemsForOperation()))
+                          .withRequiredTool(module.getRequiredTool())
+                          .build()));
             }
 
             return recipes;
