@@ -1,17 +1,15 @@
 package com.minecolonies.core.colony.buildings.workerbuildings;
 
+import com.minecolonies.api.IMinecoloniesAPI;
 import com.minecolonies.api.colony.IColony;
 import com.minecolonies.api.colony.IColonyManager;
 import com.minecolonies.api.colony.jobs.registry.JobEntry;
-import com.minecolonies.api.colony.requestsystem.StandardFactoryController;
 import com.minecolonies.api.colony.requestsystem.token.IToken;
 import com.minecolonies.api.compatibility.ICompatibilityManager;
 import com.minecolonies.api.crafting.*;
 import com.minecolonies.api.entity.citizen.AbstractEntityCitizen;
 import com.minecolonies.api.items.ModTags;
 import com.minecolonies.api.util.ItemStackUtils;
-import com.minecolonies.api.util.constant.ToolType;
-import com.minecolonies.api.util.constant.TypeConstants;
 import com.minecolonies.core.colony.buildings.AbstractBuilding;
 import com.minecolonies.core.colony.buildings.modules.AbstractCraftingBuildingModule;
 import com.minecolonies.core.colony.crafting.CustomRecipe;
@@ -28,10 +26,11 @@ import net.minecraft.world.level.block.Blocks;
 import net.minecraftforge.registries.ForgeRegistries;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
-import static com.minecolonies.api.util.constant.Constants.*;
-import static com.minecolonies.api.util.constant.Suppression.MAGIC_NUMBERS_SHOULD_NOT_BE_USED;
 import static com.minecolonies.api.util.constant.Suppression.OVERRIDE_EQUALS;
 
 /**
@@ -83,26 +82,6 @@ public class BuildingSmeltery extends AbstractBuilding
         return MAX_BUILDING_LEVEL;
     }
 
-    @SuppressWarnings(MAGIC_NUMBERS_SHOULD_NOT_BE_USED)
-    public int ingotMultiplier(final int skillLevel, final Random random)
-    {
-        switch (getBuildingLevel())
-        {
-            case 1:
-                return random.nextInt(ONE_HUNDRED_PERCENT - skillLevel / 2) == 0 ? DOUBLE : 1;
-            case 2:
-                return random.nextInt(ONE_HUNDRED_PERCENT - skillLevel) == 0 ? DOUBLE : 1;
-            case 3:
-                return 2;
-            case 4:
-                return random.nextInt(ONE_HUNDRED_PERCENT - skillLevel / 2) == 0 ? TRIPLE : DOUBLE;
-            case 5:
-                return random.nextInt(ONE_HUNDRED_PERCENT - skillLevel) == 0 ? TRIPLE : DOUBLE;
-            default:
-                return 1;
-        }
-    }
-
     public static class SmeltingModule extends AbstractCraftingBuildingModule.Smelting
     {
         /**
@@ -137,24 +116,22 @@ public class BuildingSmeltery extends AbstractBuilding
             final ICompatibilityManager compatibility = IColonyManager.getInstance().getCompatibilityManager();
             for (final ItemStack stack : compatibility.getListOfAllItems())
             {
-                if (ItemStackUtils.IS_SMELTABLE.and(compatibility::isOre).and(s -> !s.is(ModTags.breakable_ore)).test(stack))
+                if (ItemStackUtils.IS_SMELTABLE.and(compatibility::isOre).and(s -> !compatibility.isBreakableOre(s)).test(stack))
                 {
                     final ItemStack output = FurnaceRecipes.getInstance().getSmeltingResult(stack);
-                    recipes.add(createSmeltingRecipe(new ItemStorage(stack), output, Blocks.FURNACE));
+                    recipes.add(createSmeltingRecipe(stack, output, Blocks.FURNACE));
                 }
             }
             return recipes;
         }
 
-        private static IGenericRecipe createSmeltingRecipe(final ItemStorage input, final ItemStack output, final Block intermediate)
+        private static IGenericRecipe createSmeltingRecipe(final ItemStack input, final ItemStack output, final Block intermediate)
         {
-            return GenericRecipe.of(StandardFactoryController.getInstance().getNewInstance(
-                    TypeConstants.RECIPE,
-                    StandardFactoryController.getInstance().getNewInstance(TypeConstants.ITOKEN),
-                    Collections.singletonList(input),
-                    1,
-                    output,
-                    intermediate));
+            return GenericRecipe.builder()
+                    .withInputs(List.of(List.of(input)))
+                    .withOutput(output)
+                    .withIntermediate(intermediate)
+                    .build();
         }
     }
 
@@ -196,21 +173,19 @@ public class BuildingSmeltery extends AbstractBuilding
         public List<IGenericRecipe> getAdditionalRecipesForDisplayPurposesOnly(@NotNull final Level world)
         {
             final List<IGenericRecipe> recipes = new ArrayList<>(super.getAdditionalRecipesForDisplayPurposesOnly(world));
+            final ICompatibilityManager compat = IMinecoloniesAPI.getInstance().getColonyManager().getCompatibilityManager();
 
             //noinspection ConstantConditions
             for (final Item input : ForgeRegistries.ITEMS.tags().getTag(ModTags.breakable_ore))
             {
-                recipes.add(new GenericRecipe(
-                        null,                    //recipe
-                        ItemStack.EMPTY,            //output
-                        Collections.emptyList(),    //additional outputs
-                        Collections.singletonList(Collections.singletonList(new ItemStack(input))), //inputs
-                        1,                   //grid
-                        Blocks.AIR,                 //intermediate
-                        getLootTable(input),        //loottable
-                        ToolType.PICKAXE,
-                        Collections.emptyList(),    //restrictions
-                        -1));               //levelsort
+                final ItemStack inputStack = input.getDefaultInstance();
+                if (compat.isBreakableOre(inputStack))
+                {
+                    recipes.add(GenericRecipe.builder()
+                            .withInputs(List.of(List.of(inputStack)))
+                            .withLootTable(getLootTable(input))
+                            .build());
+                }
             }
 
             return recipes;
@@ -221,8 +196,16 @@ public class BuildingSmeltery extends AbstractBuilding
         {
             super.checkForWorkerSpecificRecipes();
 
+            final ICompatibilityManager compat = IMinecoloniesAPI.getInstance().getColonyManager().getCompatibilityManager();
+
             for (final Item input : ForgeRegistries.ITEMS.tags().getTag(ModTags.breakable_ore))
             {
+                final ItemStack inputStack = input.getDefaultInstance();
+                if (!compat.isBreakableOre(inputStack))
+                {
+                    continue;
+                }
+
                 Block b = Block.byItem(input);
                 List<ItemStack> drops = Block.getDrops(b.defaultBlockState(), (ServerLevel) building.getColony().getWorld(), building.getID(), null);
                 for (ItemStack drop : drops)
@@ -233,19 +216,11 @@ public class BuildingSmeltery extends AbstractBuilding
                     }
                 }
 
-                final RecipeStorage tempRecipe = StandardFactoryController.getInstance().getNewInstance(
-                    TypeConstants.RECIPE,
-                    StandardFactoryController.getInstance().getNewInstance(TypeConstants.ITOKEN),
-                    Collections.singletonList(new ItemStorage(new ItemStack(input))),
-                    1,                  //gridsize
-                    ItemStack.EMPTY,    //Output
-                    null,               //Intermediate
-                    null,               //Source
-                    null,               //Type
-                    null,               //Altoutputs
-                    drops,              //SecOutputs
-                    getLootTable(input) //Loot Table
-                    );
+                final RecipeStorage tempRecipe = RecipeStorage.builder()
+                        .withInputs(Collections.singletonList(new ItemStorage(inputStack)))
+                        .withSecondaryOutputs(drops)    // this is just a display example
+                        .withLootTable(getLootTable(input))
+                        .build();
                 IToken<?> token = IColonyManager.getInstance().getRecipeManager().checkOrAddRecipe(tempRecipe);
                 this.addRecipeToList(token, false);
             }
